--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "js-cookie": "^2.2.0",
     "vant": "^1.3.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
